GNOME Bugzilla – Bug 781882
Bring back fancy error reporter in gjs-console
Last modified: 2017-04-29 04:02:59 UTC
At some point we lost our custom error reporter from gjs-console. It doesn't compile with SpiderMonkey 45 and so will have to be changed, but I noticed it was never being called. Instead of removing it, let's restore it.
Created attachment 350617 [details] [review] modules/console: Bring back fancy error reporter At some point we lost our custom error reporter from gjs-console. It doesn't compile with SpiderMonkey 45 and so will have to be changed, but I noticed it was never being called. Instead of removing it, let's restore it.
Created attachment 350618 [details] [review] modules/console: Update fancy error reporter to mozjs38 It turns out the error reporter was copied almost verbatim from an internal SpiderMonkey function, js::PrintError(). By copying in a newer version from SpiderMonkey 38, we get the latest improvements: along with the line number, the character column of the error is also printed.
Review of attachment 350617 [details] [review]: OK
Review of attachment 350618 [details] [review]: Sure
Attachment 350617 [details] pushed as 1884a52 - modules/console: Bring back fancy error reporter Attachment 350618 [details] pushed as 854a2bc - modules/console: Update fancy error reporter to mozjs38