modules/console: Bring back fancy error reporter

At some point we lost our custom error reporter from gjs-console. It
doesn't compile with SpiderMonkey 45 and so will have to be changed, but
I noticed it was never being called. Instead of removing it, let's
restore it.

https://bugzilla.gnome.org/show_bug.cgi?id=781882